--- a/styles.css
+++ b/styles.css
@@ -245,3 +245,15 @@ padding:3px 10px;
 .no-padding{
   padding:0 !important;
 }
+
+@media only screen and (max-width: 768px) {
+    .display-desktop{
+    display: none;
+    }
+}
+
+@media only screen and (min-width: 769px) {
+    .display-mobile{
+    display: none;
+    }
+}
